--- a/site-default.css
+++ b/site-default.css
@@ -77,6 +77,7 @@ input {border: none;box-sizing: border-box;}
 /*--PostMetaHome--*/
 .post-meta {position: absolute;bottom: 0;padding: 10px 25px;left: 0;right: 0;color: #444444;font-size: 0.875rem;border-bottom:3px solid #21759b;}
 .post-timestamp {margin-left: 0 !important;margin-right: 45px;white-space: nowrap;}
+.entry-content .post-meta i,.entry-content .social-box i,.entry-content .post-footer i{font-style: normal !important;}
 .post-comment-link {white-space: nowrap;}
 .read-more {position: absolute;right: 0;bottom: 0;background-color: #21759b;color: #fff !important;padding: 13px 10px;}
 /*--PostMeta--*/
@@ -86,7 +87,7 @@ input {border: none;box-sizing: border-box;}
 .post-footer .icon{font-size: 1.2rem;font-weight: 600;}
 .post-author.vcard {margin-right: 40px;}
 .post-labels {font-size: 0.875rem;margin-top: 15px;border: 5px solid #21759b;text-transform: capitalize;}
-.labels-head {display: inline-block;background-color: #21759b;padding: 12px;color: #fff;margin-right: 5px;}
+.labels-head {display: inline-block;background-color: #21759b;padding: 10px;color: #fff;margin-right: 5px;}
 .post-labels .post-label-anchor {color: #464646;margin-right: 6px;margin-left: 3px;}
 .post-labels .post-label-anchor:hover {background-color: #21759b;color: #fff;padding:15px;}
 /*--BlogPosts--*/
@@ -131,17 +132,18 @@ input {border: none;box-sizing: border-box;}
 #comments .anon-comment-icon, .anon-comment-icon {line-height: 16px;background: url(/img/anon16-rounded.gif) left no-repeat;padding-left: 20px}
 .comment-body {margin: .5em 25px}
 .comment-body p {margin: 0}
-.comment-form {border: 2px solid #21759b;clear: both;_width: 410px;}
+.comment-form {clear: both;_width: 410px;}
+.comment-form p {border: 1px dotted #21759b;padding:15px;}
 .comment-footer {margin: .5em 25px 1.5em;}
 .comments-section {margin-top: 40px;width: 100%;}
 .comment {clear: both;padding: 0 !important;margin: 0 !important;font-size: 0.875rem;}
 .comments {clear: both;margin-top: 10px;margin-bottom: 0;position: relative;}
-.comments .comment-block {background-color: #f8f8f8;border: 1px solid #f0f0f0;margin-left: 48px;position: relative;}
-.comment-header {background-color: #eaeaea;padding: 10px 20px;border-bottom: 2px solid #21759b;margin: 0 0 8px}
+.comments .comment-block {background-color: #fff;border: 1px solid #f0f0f0;margin-left: 48px;position: relative;}
+.comments .comment-header {background-color: #f8f8f8;padding: 10px 20px;border-bottom: 2px solid #21759b;margin: 0 0 8px}
 .comments .comments-content .datetime {margin-left: 6px;float: right;}
 .comment-content {padding: 10px 20px;line-height: 1.8;margin: 0 0 8px;text-align: justify;}
 .comment-actions {text-align: left;padding: 10px 20px;display: block;width: 100%;}
-.comments .comments-content .comment-header, .comments .comments-content .comment-content{margin: 0 0 8px}
+.comments .comments-content .comment-content{margin: 0 0 8px}
 .comments .comments-content {margin-bottom: 16px}
 .comments .comments-content .comment {margin-bottom: 16px;padding-bottom: 8px}
 .comments .comments-content .comment:first-child {padding-top: 16px}
@@ -177,18 +179,17 @@ input {border: none;box-sizing: border-box;}
 .comment-link {white-space: nowrap}
 .paging-control-container {float: right;margin: 0 6px 0 0;font-size: 80%}
 .unneeded-paging-control {visibility: hidden}
-
 /*--searchStatus--*/
 .status-msg-wrap {font-size: 1rem;width: 100%;margin-top: 2px;margin-bottom: 25px;position: relative;border:.1px dotted #fff;}
 .status-msg-wrap a{padding-left:.4em;text-decoration:underline}
 .status-msg-wrap b{font-weight:600;}
-.status-msg-body{text-align:center;padding:.3em 0;width:100%;position:absolute;z-index:1;color: #464646;}
+.status-msg-body{text-align:center;padding:.3em 0;width:100%;position:absolute;z-index:9;color: #464646;}
 .home-page-btn {color: #21759b !important;}
 .home-page-btn:hover {text-decration: unferline;}
 /*--Sidebar--*/
 .sidebar-segment {float: right;width: 30%;}
 .sidebar-segment .widget {margin-bottom: 20px;}
-.sidebar-segment .widget > h3 {padding: 10px 0;text-align: center;margin-bottom: 20px;font-size: 0.975rem;font-weight: 700;text-transform: uppercase;background-color: #eaeaea;}
+.sidebar-segment .widget > h3 {padding: 10px 0;text-align: center;margin-bottom: 20px;font-size: 0.975rem;font-weight: 700;text-transform: uppercase;background-color: #f8f8f8;}
 .sidebar-segment .widget > h3:before {font-size: 1.7rem;position: absolute;bottom: -25px;left: 50%;margin-left: -8px;color: #21759b;}
 /*--SidebarTabs--*/
 .sidebartabs-segment {margin-bottom: 20px;}
@@ -211,13 +212,15 @@ input {border: none;box-sizing: border-box;}
 /*--PopularPosts--*/
 .PopularPosts .widget-content li {padding: 10px 0 8px;}
 .PopularPosts .widget-content li:first-child {padding-top: 0;}
-.PopularPosts .widget-content li:last-child {border-bottom: 0;padding-bottom: 0;}
+.PopularPosts .widget-content li:last-child {border-bottom: 1px dashed #dddddd;padding-bottom: 0;}
 .PopularPosts .item-thumbnail {float: none;display: table-cell;}
 .PopularPosts .item-thumbnail img {width: 145px;height: 80px;padding-right: 0 !important;border: 1px solid #fff;border-radius: 5%;}
-.PopularPosts .item-title {padding-left: 13px;display: table-cell;vertical-align: middle;line-height: 1.5;font-family: Arial,Georgia,Serif;font-size: 0.875rem;font-weight: 700;text-transform: capitalize;border-bottom: 2px solid #e6e6e6;}
-.PopularPosts .widget-content a{padding-left: 13px;display: table-cell;vertical-align: middle;line-height: 1.5;font-family: Arial,Georgia,Serif;font-size: 0.975rem;font-weight: 700;text-transform: capitalize;border-bottom: 2px solid #e6e6e6;}
-.PopularPosts .widget-content a:hover {color: #21759b;}
-.PopularPosts .item-title a:hover {color: #21759b;}
+.popular-posts ul {padding-left: 0px;counter-reset: popcount;}
+.popular-posts ul li:before {list-style-type: none;margin-right: 15px;padding: 0.3em 0.6em;counter-increment: popcount;content: counter(popcount);font-size: 1em;background: #292D30;color: #ffffff;position: relative;font-weight: bold;font-family: georgia;float: left;border: 2px solid #dddddd;box-shadow: 1px 2px 9px #666666;border-radius:25%;}
+.popular-posts ul li {border-bottom: 1px dashed #dddddd;}
+.popular-posts ul li:hover {border-bottom: 1px dashed #464646;}
+.popular-posts ul li a {text-decoration:none;color:#464646;padding-left: 13px;display: table-cell;vertical-align: middle;line-height: 1.5;font-family: Arial,Georgia,Serif;font-size: 0.975rem;font-weight: 700;text-transform: capitalize;}
+.popular-posts ul li a:hover {color: #21759b;}
 /*--RelatedPosts--*/
 .related-posts {width: 100%;margin-bottom: 30px;margin-top: 30px;}
 .related-posts-heading {font-size: 1.2rem;font-weight: 700;text-transform: capitalize;border-bottom: 2px solid #e6e6e6;margin-bottom: 15px;}
@@ -230,13 +233,13 @@ input {border: none;box-sizing: border-box;}
 .icon {margin-right: 5px;transition: all 0s ease-in-out;}
 /*--Footer--*/
 #footer-segment {background: #444444;color: #FFFFFF;padding: 30px 0 0;}
-#footer-copyright {padding: 2px 0 5px;text-align: center;font-family: Georgia,Serif;}
+#footer-copyright {padding: 5px 0 5px;text-align: center;font-size:0.8em;font-family: Georgia,Serif;}
 #footer-segment a{color:#38A3E9;}
 #footer-segment .container > .section {float: left;width: 45%;margin-right: 5%;}
 #footer-right {margin-right: 0 !important;}
 #footer-segment .widget > h3 {margin-bottom: 25px;text-transform: uppercase;color: #FFFFFF;border-bottom: 3px solid #21759b;position: relative;text-align: center;width: 100%;}
 #footer-left img {margin-bottom: 20px;}
-#footer-segment .widget {margin-bottom: 5px;}
+#footer-segment .widget {margin-bottom: 15px;}
 #footer-segment .LinkList {color: #fff;}
 #footer-segment .LinkList li {float: left;margin-right: 5px;}
 #footer-segment .LinkList a {display: block;background-color: #212121;width: 30px;height: 30px;text-align: center;line-height: 30px;}
@@ -338,6 +341,7 @@ overflow: hidden;padding: 10px;margin: 0 0 10px;font-family: Arial,Georgia,Serif
 .social-share .rss-share:hover{background:rgba(239,155,50,0.7)}
 .social-share .ytube-share{background:#e52d27;margin-right:0}
 .social-share .ytube-share:hover{background:rgba(220,40,30,0.7)}
+.share-msg{font-size:.9em; padding: 0 0 5px;}
 /*--BackToTop--*/
 .back-to-top {position: fixed;bottom: 1.5em;right: 5px;font-size:40px;z-index: 99;}
 /*--ContactForm--*/
@@ -377,13 +381,12 @@ list-style-image: none;list-style-position: outside;border-width: 0;padding-left
 .social_item-follow {width: 30.6%;}
 #footer-segment .container > .section {width: 100%;float: none;}
 }
-@media only screen and (max-width: 880px) {
-.searchbox form{right: 10px;}
-#footer-copyright {padding: 2px 0 50px;text-align: center;}
-}
+
 @media only screen and (max-width: 768px) {
 .header-logo-container .widget:last-child {display: none;}
 .header-logo-container .Header {margin-bottom: 0;}
+.searchbox form{right: 10px;}
+#footer-copyright {padding: 5px 0 50px;text-align: center;line-height: 1.8;}
 }
 @media only screen and (max-width: 660px) {
 .post-image-segment {width: 100%;height: 240px;}
@@ -414,6 +417,7 @@ list-style-image: none;list-style-position: outside;border-width: 0;padding-left
 .post-timestamp {margin-right: 25px;}
 .post-comment-link, .twocolumns .publish-date:after  {display: none;}
 .post-title.entry-title {margin-bottom: 15px;}
+.status-msg-wrap {margin-bottom: 42px;}
 }
 @media only screen and (max-width: 319px) {
 #LinkList3 ul li:nth-of-type(5),#LinkList3 ul li:nth-of-type(6), .twocolumns .publish-date, .twocolumns .comments, .sidebar-segment, #footer-segment .container {display:none;}
@@ -426,7 +430,6 @@ list-style-image: none;list-style-position: outside;border-width: 0;padding-left
 .comment-tab-item {padding: 10px 8px 8px !important;}
 #footer-segment {padding: 0;font-size: 10px;}
 .search-box  form input {width: 255px;}
-.status-msg-wrap {margin-bottom: 42px;}
 }
 @media only screen and (max-width: 288px) {
 .read-more {padding: 16px;width:100%;}
